assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "minima";

.img-float-left {
  border-radius: 10%;
  float: left;
  margin: 0 $spacing-unit $spacing-unit 0;
  width: 50%;
}

.img-float-right {
  border-radius: 10%;
  float: right;
  margin: 0 0 $spacing-unit $spacing-unit;
  width: 50%;
}

//
// Specific pages
//

//
// Tooltip
//

.has-tooltip {
  border-bottom: 1px dotted mix($text-color, $background-color, 20%);
  display: inline-block;
  position: relative;

  .tooltip-text-medium {
    width: #{$spacing-unit * 3};
  }
  
  .tooltip-text-top,
  .tooltip-text-right,
  .tooltip-text-bottom,
  .tooltip-text-left {
    background-color: $grey-color-light;
    border-radius: 6px;
    border: 1px dotted $grey-color-dark;
    color: $text-color;
    display: inline-block;
    padding: #{$spacing-unit / 8} #{$spacing-unit / 4};
    position: absolute;
    text-align: center;
    visibility: hidden;
    z-index: 1;
}

  .tooltip-text-top {
    bottom: 105%;
    left: 0%;
  }

  .tooltip-text-right {
    top: 0%;
    left: 105%;
  }

  .tooltip-text-bottom {
    top: 105%;
    left: 0%;
  }

  .tooltip-text-left {
    top: 0%;
    right: 105%;
  }

  &:hover {
    .tooltip-text-top,
    .tooltip-text-right,
    .tooltip-text-bottom,
    .tooltip-text-left {
      visibility: visible;
    }
  }
}

//
// Printing
//

.display-only-on-print {
  display: none;
}

@media print {
  .hide-on-print {
    display: none;
  }
  .display-only-on-print {
    display: block;
  }
}

.dont-break-on-print {
  page-break-inside: avoid;
}

